@@ -1,3 +1,7 @@
+2014-07-21  Corinna Vinschen  <corinna@vinschen.de>
+
+	* new-features.xml: (ov-new1.7.31): Add new section.
+
 2014-06-26  Corinna Vinschen  <corinna@vinschen.de>
 
 	* legal.xml: Fix copyright.
